--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
-/* Style the video: 100% width and height to cover the entire window */
-#bg-video {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+.video-container {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
-.content {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: rgb(187, 187, 187);
+#background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  padding: 20px;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
