--- a/styles.css
+++ b/styles.css
@@ -36,10 +36,12 @@ h1, h2, h3, p {
   color: white;
 }
 
-img.content {
-  max-width: 100%;
-  height: 250px;
-  object-fit: cover;
-  border-radius: 0.5em;
+.content > img {
+  margin-right: 2rem;
+  max-width: 100vw;
+  max-height: 100vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
 }
 
