--- a/styles.css
+++ b/styles.css
@@ -37,10 +37,10 @@ h1, h2, h3, p {
 }
 
 .content > img {
-  margin-right: 2rem;
+
   max-width: 100vw;
   max-height: 100vh;
-  width: auto;
+  width: 100%;
   height: auto;
   object-fit: contain;
 }
