--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,6 @@ h1, h2, h3, p {
   color: white;
 }
 
-.content > h3, p {
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
 .content > img {
   max-width: 100vw;
   max-height: 100vh;
@@ -43,5 +39,20 @@ h1, h2, h3, p {
   height: auto;
   object-fit: contain;
   border-radius: 10px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 1rem;
+}
+.footer > h3 {
+  margin: 0;
+}
+.footer > h3, p {
+  background-color: rgba(255, 255, 255, 0.5);
+color: blue;
 }
 
