Added to hero section. Swapped project/store calc sections

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,9 @@ body {
 .hero-section {
   grid-column: span 2;
 }
+.subtitle {
+  margin-top: 10px;
+}
 
 .storecalc-section,
 .projects-section {
