--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,10 @@ body {
   background-color: var(--blue-main-bg);
 }
 
+.footer-links p {
+  margin: 0 10px 10px 10px;
+}
+
 /* Responsive Styles */
 @media (max-width: 768px) {
   .main-grid {
