--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <!-- Main Content -->
     <main class="main-grid">
         <!-- Hero Section -->
-        <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
+        <section class="hero-section rounded-3 pt-4 pb-3 ps-5">
             <h1 class="gradient-text">phishtopia.com</h1>
             <p>Home of the improbable. Where creativity is shared safely.</p>
         </section>
