--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -68,6 +68,7 @@
 </head>
 
 <body>
+<canvas id="bubble-canvas"></canvas>
 <!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
     <div class="container-fluid">
