--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -16,6 +16,7 @@
     crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="/index.js"></script>
+<script src="/res/js/canvas.js"></script>
 
 <% if (typeof extraScripts !=='undefined' ) { %>
     <% if (Array.isArray(extraScripts)) { %>
