--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,5 +1,5 @@
 
-+<%- include('partials/header', { title: 'Projects Categories' }) %>
+<%- include('partials/header', { title: 'Projects Categories' }) %>
     
   <!-- Main Content -->
   <main class="main-grid">
