--- a/views/logo.ejs
+++ b/views/logo.ejs
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <title>INTM Logo</title>
-    <link rel="stylesheet" href="/canvas/Corp-Logo/style.css">
+    <link rel="stylesheet" href="./styles/logo.css">
 </head>
 
 <body>
     <div>
         <canvas id="gearCanvas" width="450" height="450" style="position:absolute; top:0; left:0;"></canvas>
     </div>
-    <script src="/canvas/Corp-Logo/logo.js"></script>
+    <script src="/res/js/logo.js"></script>
 </body>
 </html>
