--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -13,7 +13,8 @@
       <section class="projects-section just-in-section">
         <h2>This Just In:</h2>
         <ul>
-          <li><a href="simon"><h3>"Simon"</h3></a></li>
+          <li><a href="logo"><h3>Animated INTM Logo</h3></a></li>
+          <li><a href="simon"><h3>Simon Game</h3></a></li>
         </ul>
       </section>
       <!-- Project Categories -->
