Delete Unneccessary Pages

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -86,14 +86,7 @@
                         Projects Showcase
                     </a>
                     <ul class="dropdown-menu gradient-background">
-                        <li><a class="dropdown-item" href="software">Software</a></li>
-                        <li><a class="dropdown-item" href="engineering">Mechanical/Electrical
-                                Engineering</a></li>
-                        <li><a class="dropdown-item" href="art">Artwork</a></li>
-                        <li><a class="dropdown-item" href="food">Food</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
+                        <!--<li><a class="dropdown-item" href="software">Software</a></li>-->
                         <li><a class="dropdown-item" href="contact">Got a Question?</a></li>
                     </ul>
                 </li>
