--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -5,30 +5,18 @@
   <main class="main-grid">
     <!-- Hero Section -->
     <section class="hero-section gradient-background rounded-3 pt-4 pb-3 ps-5">
-      <h1 class="gradient-text">Project Categories</h1>
+      <h1 class="gradient-text">Projects</h1>
     </section>
     <!-- Projects Sections -->
     <div class="projects-grid">
       <!-- This Just In Section -->
       <section class="projects-section just-in-section">
-        <h2>This Just In:</h2>
+        <h2>2025:</h2>
         <ul>
           <li><a href="INTM-Logo"><h3>Animated INTM Logo</h3></a></li>
           <li><a href="simon"><h3>Simon Game</h3></a></li>
+          <li><a href="https://phishyone.github.io/Fullstack-Course/">Web Dev Course Projects</a></li>
         </ul>
-      </section>
-      <!-- Project Categories -->
-      <section class="projects-section projects-list-section">
-        <a href="software"><h2>Software</h2></a>
-      </section>
-      <section class="projects-section projects-list-section">
-        <a href="art"><h2>Art</h2></a>
-      </section>
-      <section class="projects-section projects-list-section">
-        <a href="food"><h2>Food</h2></a>
-      </section>
-      <section class="projects-section projects-list-section">
-        <a href="engineering"><h2>Engineering</h2></a>
       </section>
     </div>
   </main>
