Prepare EE PlayInt

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,13 +15,12 @@
             <p>phishtopia is a platform for a hopeful web developer to get noticed. I aim to showcase my projects and progress while making useful tools that people enjoy using.</p>
             <a href="projects" class="btn btn-outline-dark button">View Projects</a>
         </section>
-        <!-- StoreCalc Online Section -->
+        <!-- EE PlayInt Section -->
         <section class="storecalc-section dark-bg">
-            <h2>StoreCalc Online (Egg Stage)</h2>
-            <p>Coming Soon! StoreCalc helps prisoners total up their commissary items and keep records of their
-                purchases.
+            <h2>Eve Echoes Player Intelligence</h2>
+            <p>Using publicly available killmails from the echoes.mobi api, this tool produces the likely location and time of play for a chosen player.
             </p>
-            <a href="storecalc" class="btn btn-outline-light button">StoreCalc Online</a>
+            <a href="PlayInt" class="btn btn-outline-light button">EE PlayInt</a>
         </section>
         </main>
 
