--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,49 +52,48 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
-        <!-- Main Styles -->
-        <link rel="stylesheet" href="./styles/main.css">
-        
-        <% if (typeof extraStyles !=='undefined' ) { %>
-            <% if (Array.isArray(extraStyles)) { %>
-                <% extraStyles.forEach(function(src) { %>
-                    <link rel="stylesheet" href="<%= src %>">
-                    <% }); %>
-                        <% } else { %>
-                            <link rel="stylesheet" href="<%= extraStyles %>">
+    <!-- Main Styles -->
+    <link rel="stylesheet" href="./styles/main.css">
+    <% if (typeof extraStyles !=='undefined' ) { %>
+        <% if (Array.isArray(extraStyles)) { %>
+            <% extraStyles.forEach(function(src) { %>
+                <link rel="stylesheet" href="<%= src %>">
+                <% }); %>
+                    <% } else { %>
+                        <link rel="stylesheet" href="<%= extraStyles %>">
+                        <% } %>
                             <% } %>
-                                <% } %>
 
 </head>
 
 <body>
-<canvas id="bubble-canvas"></canvas>
-<!-- Nav Bar -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="https://phishtopia.com"><img src="res/images/phishLogo.png" alt="Phishtopia"
-                class="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Projects Showcase
-                    </a>
-                    <ul class="dropdown-menu gradient-background">
-                        <!--<li><a class="dropdown-item" href="software">Software</a></li>-->
-                        <li><a class="dropdown-item" href="contact">Got a Question?</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="storecalc">StoreCalc Online</a>
-                </li>
-            </ul>
+    <canvas id="bubble-canvas"></canvas>
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary gradient-background">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="https://phishtopia.com"><img src="res/images/phishLogo.png" alt="Phishtopia"
+                    class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Projects Showcase
+                        </a>
+                        <ul class="dropdown-menu gradient-background">
+                            <li><a class="dropdown-item" href="projects">Projects</a></li>
+                            <li><a class="dropdown-item" href="contact">Got a Question?</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="PlayInt">Echoes PlayInt</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-
-    </div>
-</nav>
+    </nav>
