--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -13,6 +13,7 @@
       <section class="projects-section just-in-section">
         <h2>2025:</h2>
         <ul>
+          <li><a href="PlayInt"><h3>EE PlayInt</h3></a></li>
           <li><a href="INTM-Logo"><h3>Animated INTM Logo</h3></a></li>
           <li><a href="simon"><h3>Simon Game</h3></a></li>
           <li><a href="https://phishyone.github.io/Fullstack-Course/">Web Dev Course Projects</a></li>
