--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,5 +1,5 @@
 
-<%- include('partials/header', { title: 'Projects Categories' }) %>
+<%- include('partials/header', { title: 'Projects' }) %>
     
   <!-- Main Content -->
   <main class="main-grid">
@@ -13,10 +13,10 @@
       <section class="projects-section just-in-section">
         <h2>2025:</h2>
         <ul>
-          <li><a href="PlayInt"><h3>EE PlayInt</h3></a></li>
+          <li><a href="PlayInt"><h3>Echoes PlayInt</h3></a></li>
           <li><a href="INTM-Logo"><h3>Animated INTM Logo</h3></a></li>
           <li><a href="simon"><h3>Simon Game</h3></a></li>
-          <li><a href="https://phishyone.github.io/Fullstack-Course/">Web Dev Course Projects</a></li>
+          <li><a href="https://phishyone.github.io/Fullstack-Course/"><h3>App Brewery Web Dev Course Projects</h3></a></li>
         </ul>
       </section>
     </div>
