--- a/views/PlayInt.ejs
+++ b/views/PlayInt.ejs
@@ -112,5 +112,5 @@
                                     <% } %>
 </div>
 
-<%- include('partials/footer', extraScripts {'res/js/stars-bg.js', 'res/js/little-logo.js'
-    , 'res/js/playint-spin.js' }) %>
+<%- include('partials/footer', { extraScripts: ['res/js/stars-bg.js', 'res/js/little-logo.js',
+    'res/js/playint-spin.js', 'res/js/playint.js'] }) %>
